tests/fixtures/fail/coalesce_option_rhs_mismatch.sc
let Option = std.Option

let main(): i32 = { Option(i32).None ?? true }
